# SerialAutoTest

./: CMakeLists.txt  ComAutoTest.cpp  ComAutoTest.h  ComAutoTest.qrc  ComAutoTest.rc  ComAutoTest.ui  LICENSE.html  LXsheet.h  TestArrange.csv  main.cpp  resource.h  生产试验安排表.py
CommandList/: Sheet1.cml
